@@ -444,18 +444,30 @@ var RoboHydraHeadFilesystem = robohydraHeadType({
     mandatoryProperties: ['documentRoot'],
     optionalProperties: [{name: 'mountPath', defaultValue: '/'},
                          'indexFiles',
+                         {name: 'passThrough', defaultValue: false},
                          {name: 'fs', defaultValue: fs},
                          {name: 'mime', defaultValue: mime}],
 
     parentPropertyBuilder: function() {
         return {
             mountPath: this.mountPath,
-            handler: function(req, res) {
+            handler: function(req, res, next) {
                 var relUrlPath =
                         relativePath(this.mountPath, req.url).split('?')[0];
                 var relFilePath = decodeURIComponent(relUrlPath);
                 var filePath = path.join(this.documentRoot, relFilePath);
-                serveStaticFile(filePath, res, {
+                var self = this;
+
+                var fakeRes = new Response().on('end', function(evt) {
+                    if (self.passThrough && evt.response.statusCode === 404) {
+                        next(req, res);
+                    } else {
+                        res.copyFrom(evt.response);
+                        res.end();
+                    }
+                });
+
+                serveStaticFile(filePath, fakeRes, {
                     fs: this.fs,
                     mime: this.mime,
                     headers: req.headers,
